feat(colorSwitch): more responsiveness for position

--- a/src/components/colorSwitch.component.astro
+++ b/src/components/colorSwitch.component.astro
@@ -22,12 +22,17 @@
     --hoverColor: #007f00;
   }
   #circle-container {
-    position: absolute;
+    position: fixed;
     bottom: 3px;
     right: 6px;
 
     user-select: none;
     -moz-user-select: none;
     -webkit-user-select: none;
+  }
+  @media (min-width: 638px) {
+    #circle-container {
+      right: 15px;
+    }
   }
 </style>
