--- a/src/components/posts.component.astro
+++ b/src/components/posts.component.astro
@@ -10,30 +10,38 @@ const { posts } = Astro.props;
 
 {
   posts.length > 0 && posts[0] && (
-    <h2>{new Date(posts[0].frontmatter.date).getFullYear()}</h2>
-    <ul>
-      {posts.map((post) => (
-        <li>
-          <a href={post.url}>{post.frontmatter.title}</a>
-          <time datetime={post.frontmatter.date}>
-            ({new Date(post.frontmatter.date).toLocaleDateString("fr-fr", {
-              year: "numeric",
-              month: "numeric",
-              day: "numeric",
-            })})
-          </time>
-        </li>
-      ))}
-    </ul>
+    <section>
+      <h2>{new Date(posts[0].frontmatter.date).getFullYear()}</h2>
+      <ul>
+        {posts.map((post) => (
+          <li>
+            <a href={post.url}>{post.frontmatter.title}</a>
+            <time datetime={post.frontmatter.date}>
+              (
+              {new Date(post.frontmatter.date).toLocaleDateString("fr-fr", {
+                year: "numeric",
+                month: "numeric",
+                day: "numeric",
+              })}
+              )
+            </time>
+          </li>
+        ))}
+      </ul>
+    </section>
   )
 }
 
 <style>
+  section {
+    margin-top: 3rem;
+  }
   h2 {
     text-align: center;
+    margin-bottom: 1.7rem;
   }
 
   time {
-    font-size:14px;
+    font-size: 14px;
   }
 </style>
