--- a/src/layouts/blogPost.layout.astro
+++ b/src/layouts/blogPost.layout.astro
@@ -4,37 +4,43 @@ const { frontmatter } = Astro.props;
 ---
 
 <Mainlayout>
-  <h1>
-    {frontmatter.title}
-  </h1>
+  <section>
+    <h1>
+      {frontmatter.title}
+    </h1>
 
-  <time datetime={frontmatter.pubDate}>
-    {
-      new Date(frontmatter.date).toLocaleDateString("fr-fr", {
-        year: "numeric",
-        month: "long",
-        day: "numeric",
-      })
-    }
-  </time>
+    <time datetime={frontmatter.pubDate}>
+      {
+        new Date(frontmatter.date).toLocaleDateString("fr-fr", {
+          year: "numeric",
+          month: "long",
+          day: "numeric",
+        })
+      }
+    </time>
 
-  <slot />
-
-  <style>
-    h1 {
-      margin-top: 2rem !important;
-      margin-bottom: 1rem !important;
-      text-align: center;
-    }
-
-    time {
-      display: block;
-      margin-bottom: 2rem;
-      margin-inline: auto;
-      border-top: 2px solid green;
-      width: fit-content;
-      padding: 8px 10px;
-      color: green;
-    }
-  </style>
+    <slot />
+  </section>
 </Mainlayout>
+
+<style>
+  section {
+    margin: 0 auto;
+    max-width: 800px;
+  }
+  h1 {
+    margin-top: 2rem !important;
+    margin-bottom: 1rem !important;
+    text-align: center;
+  }
+
+  time {
+    display: block;
+    margin-bottom: 2rem;
+    margin-inline: auto;
+    border-top: 2px solid green;
+    width: fit-content;
+    padding: 8px 10px;
+    color: green;
+  }
+</style>
