--- a/src/components/posts.component.astro
+++ b/src/components/posts.component.astro
@@ -17,13 +17,13 @@ const { posts } = Astro.props;
           <li>
             <a href={post.url}>{post.frontmatter.title}</a>
             <time datetime={post.frontmatter.date}>
-              (
-              {new Date(post.frontmatter.date).toLocaleDateString("fr-fr", {
-                year: "numeric",
-                month: "numeric",
-                day: "numeric",
-              })}
-              )
+              {"(" +
+                new Date(post.frontmatter.date).toLocaleDateString("fr-fr", {
+                  year: "numeric",
+                  month: "numeric",
+                  day: "numeric",
+                }) +
+                ")"}
             </time>
           </li>
         ))}
@@ -43,5 +43,6 @@ const { posts } = Astro.props;
 
   time {
     font-size: 14px;
+    white-space: nowrap;
   }
 </style>
