feat(ui): move color picker to the top and remove twitter

--- a/src/components/colorSwitch.component.astro
+++ b/src/components/colorSwitch.component.astro
@@ -18,10 +18,7 @@
 
 <style>
   #circle-container {
-    position: fixed;
-    bottom: 3px;
-    right: 6px;
-
+    transform: scale(0.6) translateY(3px);
     user-select: none;
     -moz-user-select: none;
     -webkit-user-select: none;
@@ -31,7 +28,7 @@
   }
   @media (min-width: 638px) {
     #circle-container {
-      right: 15px;
+      transform: scale(0.8) translateY(1px);
     }
   }
 </style>
