fix(core): update broken link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,8 @@ import HpLayout from "../layouts/hp.layout.astro";
           about="lien vers le site lepetitnietzsche.fr"
           target="_blank">Humanités</a
         > et des <a
-          href="https://archinfo24.hypotheses.org/3262"
-          about="lien vers un article concernant l'ubérisation d'internet"
+          href="https://isidore.science/document/10670/1.au5719"
+          about="lien vers un article traitant du phénoméène d'ubérisation sur internet"
           target="_blank">Humanités numériques</a
         >, je suis maintenant développeur.
       </p>
