chore(core): remove useless css class

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,21 +24,11 @@ import HpLayout from "../layouts/hp.layout.astro";
       </p>
       <ul>
         <li>
-          <a href="https://github.com/pedenys" target="_blank" class="github"
-            >GitHub</a
-          >
+          <a href="https://github.com/pedenys" target="_blank">GitHub</a>
         </li><li>
-          <a
-            href="https://twitter.com/_pedenys_"
-            target="_blank"
-            class="twitter">Twitter</a
-          >
+          <a href="https://twitter.com/_pedenys_" target="_blank">Twitter</a>
         </li><li>
-          <a
-            href="https://www.last.fm/user/pedenys"
-            target="_blank"
-            class="lastfm">Last.fm</a
-          >
+          <a href="https://www.last.fm/user/pedenys" target="_blank">Last.fm</a>
         </li>
       </ul>
     </div>
