feat(core): update meta theme-color color

--- a/src/layouts/main.layout.astro
+++ b/src/layouts/main.layout.astro
@@ -29,7 +29,7 @@ const currentPageIsBlogPost = Astro.url.pathname.includes("blob/");
       sizes="16x16"
       href="./favicon-16x16.png"
     />
-    <meta name="theme-color" content="#8ecaa1" />
+    <meta name="theme-color" />
     <title>pedenys</title>
 
     <style>
