--- a/src/layouts/main.layout.astro
+++ b/src/layouts/main.layout.astro
@@ -11,7 +11,7 @@ const currentPageIsBlogPost = Astro.url.pathname.includes("blob/");
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="About me page" />
+    <meta name="description" content="À propos" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
