feat(content): update bio

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,10 +18,7 @@ import HpLayout from "../layouts/hp.layout.astro";
         >, je suis maintenant développeur.
       </p>
 
-      <p>
-        J'aime la culture classique, la campagne et manger («&nbsp;Ben oui,
-        c'est un plaisir de manger&nbsp;» — Obélix).
-      </p>
+      <p>J'aime la culture classique.</p>
       <ul>
         <li>
           <a href="https://github.com/pedenys" target="_blank">GitHub</a>
