feat(content): update uses

--- a/src/pages/uses.astro
+++ b/src/pages/uses.astro
@@ -4,23 +4,13 @@ import Mainlayout from "../layouts/main.layout.astro";
 
 <Mainlayout>
   <h1>Uses</h1>
-  <section>
+  <section class="uses">
     <h2>Hard</h2>
     <ul>
       <li>Mac Book Pro 15' 2018 i7 16 Go</li>
       <li>iPhone 12 64 Go</li>
-      <li>
-        <a
-          href="https://www.amazon.fr/Logitech-Mechanical-Rétroéclairé-Performant-Silencieux/dp/B07W8QFPC8"
-          >Logitech MX Mechanical Mini</a
-        >
-      </li>
-      <li>
-        <a
-          href="https://www.amazon.fr/Logitech-Master-Performante-Ultra-Rapide-Ergonomique/dp/B07W5JKHFZ"
-          >Logitech MX Master 3S</a
-        >
-      </li>
+      <li>Apple Magic Keyboard (blanc)</li>
+      <li>Apple Magic Mouse (blanche)</li>
       <li>
         <a href="https://www.amazon.fr/gp/product/B07DHK5DHN"
           >Amazon Basics bras de support</a
@@ -31,13 +21,20 @@ import Mainlayout from "../layouts/main.layout.astro";
   <section>
     <h2>Soft</h2>
     <ul>
-      <li>Things</li>
-      <li>Raycast</li>
-      <li>VSCode</li>
+      <li><a href="https://culturedcode.com/things/">Things</a></li>
+      <li><a href="https://www.raycast.com/">Raycast</a></li>
+      <li><a href="https://code.visualstudio.com/">VSCode</a></li>
+      <li><a href="https://1password.com/fr/">1Password</a></li>
       <li>Safari</li>
-      <li>1Password</li>
       <li>MacOS Mail</li>
       <li>iOS Mail</li>
     </ul>
   </section>
 </Mainlayout>
+<style>
+  h1 {
+    margin-top: 2rem !important;
+    margin-bottom: 1rem !important;
+    text-align: center;
+  }
+</style>
