feat(ui): posts and color menu refinements

--- a/src/components/colorSwitch.component.astro
+++ b/src/components/colorSwitch.component.astro
@@ -3,12 +3,11 @@
 </script>
 
 <div id="circle-container">
-  <svg height="
-  45" width="50">
+  <svg width="34px" height="34px">
     <circle
       id="circle"
-      cx="25"
-      cy="25"
+      cx="17"
+      cy="17"
       r="15"
       stroke="black"
       stroke-width="3"
@@ -22,6 +21,8 @@
     user-select: none;
     -moz-user-select: none;
     -webkit-user-select: none;
+    line-height: 0;
+    margin-right: 0.7rem;
   }
   #circle-container circle {
     fill: var(--hoverColor);
