--- a/src/layouts/blogPost.layout.astro
+++ b/src/layouts/blogPost.layout.astro
@@ -4,7 +4,7 @@ const { frontmatter } = Astro.props;
 ---
 
 <Mainlayout>
-  <section>
+  <section class="post">
     <h1>
       {frontmatter.title}
     </h1>
