feat(analytics): add vercel script analytics

--- a/src/layouts/main.layout.astro
+++ b/src/layouts/main.layout.astro
@@ -31,7 +31,7 @@ const currentPageIsBlogPost = Astro.url.pathname.includes("blob/");
     />
     <meta name="theme-color" />
     <title>pedenys</title>
-
+    <script defer src="/_vercel/insights/script.js"></script>
     <style>
       nav {
         width: 100%;
