--- a/src/layouts/blogPost.layout.astro
+++ b/src/layouts/blogPost.layout.astro
@@ -38,9 +38,9 @@ const { frontmatter } = Astro.props;
     display: block;
     margin-bottom: 2rem;
     margin-inline: auto;
-    border-top: 2px solid green;
+    border-top: 2px solid var(--hoverColor);
     width: fit-content;
     padding: 8px 10px;
-    color: green;
+    color: var(--hoverColor);
   }
 </style>
