feat(content): wording

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,18 +7,18 @@ import HpLayout from "../layouts/hp.layout.astro";
     <img src="./avatar.jpg" id="avatar" />
     <div>
       <p>
-        Ancien des <a
+        Passé par les <a
           href="http://lepetitnietzsche.fr/"
           about="lien vers le site lepetitnietzsche.fr"
           target="_blank">Humanités</a
-        > et des <a
+        > et les <a
           href="https://isidore.science/document/10670/1.au5719"
           about="lien vers un article traitant du phénoméène d'ubérisation sur internet"
           target="_blank">Humanités numériques</a
-        >, je suis maintenant développeur.
+        >,&nbsp;je suis maintenant développeur.
       </p>
 
-      <p>J'aime <a href="/posts">la culture classique</a>.</p>
+      <p>J'aime la culture classique et j'écris <a href="/posts">un peu</a>.</p>
       <ul>
         <li class="first">
           <a href="https://github.com/pedenys" target="_blank">GitHub</a>
