--- a/src/components/posts.component.astro
+++ b/src/components/posts.component.astro
@@ -11,7 +11,7 @@ const { posts } = Astro.props;
 {
   posts.length > 0 && posts[0] && (
     <section>
-      <h2>{new Date(posts[0].frontmatter.date).getFullYear()}</h2>
+      {/* <h3>{new Date(posts[0].frontmatter.date).getFullYear()}</h3> */}
       <ul>
         {posts.map((post: Post) => (
           <li>
@@ -38,11 +38,9 @@ const { posts } = Astro.props;
     margin-top: 3rem;
   }
 
-  h2 {
-    /* text-align: center; */
+  h3 {
     margin-left: 40px;
     margin-bottom: 1.7rem;
-    font-size: 24px;
   }
 
   ul {
