feat(ui): dark + mobile menu

--- a/src/layouts/blogPost.layout.astro
+++ b/src/layouts/blogPost.layout.astro
@@ -1,5 +1,5 @@
 ---
-import Mainlayout from "./main.layout.astro";
+import Mainlayout from "./main/layout.astro";
 const { frontmatter } = Astro.props;
 ---
 
