--- a/src/pages/posts.astro
+++ b/src/pages/posts.astro
@@ -1,5 +1,5 @@
 ---
-import Mainlayout from "../layouts/main.layout.astro";
+import Mainlayout from "../layouts/main/layout.astro";
 import PostsComponent from "../components/posts.component.astro";
 import type { Post as PostType } from "../types/post.type";
 
