--- a/src/components/home/Entries.component.astro
+++ b/src/components/home/Entries.component.astro
@@ -1,36 +1,38 @@
 ---
-import type { Post, Post as PostType } from "../../types/post.type";
+import type { Entry } from "../../types/writings.type";
 
 // Use Astro.glob() to fetch all posts, and then sort them by date.
-const posts = (await Astro.glob("../../pages/posts/**/*.{md,mdx}")).sort(
+const entries = (await Astro.glob("../../pages/entries/**/*.{md,mdx}")).sort(
   (a, b) =>
     new Date(b.frontmatter.date).valueOf() -
     new Date(a.frontmatter.date).valueOf()
-) as PostType[];
+) as Entry[];
 
-const latestPost = posts.slice(0, 5);
+const latestEntries = entries.slice(0, 5);
 ---
 
 <div class="default-bottom-spacing">
   <h2>Entries</h2>
   {
-    latestPost.length > 0 && latestPost[0] && (
+    latestEntries.length > 0 && latestEntries[0] && (
       <section>
         {/* <h3>{new Date(posts[0].frontmatter.date).getFullYear()}</h3> */}
         <ul>
-          {latestPost.map((post: Post) => (
+          {latestEntries.map((entry: Entry) => (
             <li>
-              <a href={post.url}>{post.frontmatter.title}</a>
-              <time datetime={post.frontmatter.date}>
+              <a class="default-link" href={entry.url}>
+                {entry.frontmatter.title}
+              </a>
+              <time datetime={entry.frontmatter.date}>
                 {"(" +
-                  new Date(post.frontmatter.date).toLocaleDateString("fr-fr", {
+                  new Date(entry.frontmatter.date).toLocaleDateString("fr-fr", {
                     year: "numeric",
                     month: "numeric",
                     // day: "numeric",
                   }) +
                   ")"}
               </time>
-              <code>#{post.frontmatter.tag}</code>
+              {/* <code>#{post.frontmatter.tag}</code> */}
             </li>
           ))}
         </ul>
@@ -39,10 +41,9 @@ const latestPost = posts.slice(0, 5);
   }
 
   <style>
-    section {
-      margin-top: 3rem;
+    h2 {
+      margin-bottom: 14px;
     }
-
     h3 {
       margin-left: 40px;
       margin-bottom: 1.7rem;
