--- a/src/layouts/blogPost.layout.astro
+++ b/src/layouts/blogPost.layout.astro
@@ -28,10 +28,12 @@ const { frontmatter } = Astro.props;
     margin: 0 auto;
     max-width: 800px;
   }
+
   h1 {
     margin-top: 2rem !important;
     margin-bottom: 1rem !important;
     text-align: center;
+    color: var(--white-2);
   }
 
   time {
@@ -41,6 +43,6 @@ const { frontmatter } = Astro.props;
     border-top: 2px solid var(--hoverColor);
     width: fit-content;
     padding: 8px 10px;
-    color: var(--hoverColor);
+    font-size: 16px;
   }
 </style>
