--- a/src/components/Footer.component.astro
+++ b/src/components/Footer.component.astro
@@ -1,8 +1,8 @@
-<footer>
+<footer class="default-top-spacing">
   <p>
     I'm also not here on <a href="https://x.com/pedenys__" class="default-link"
       >X</a
-    >, <a href="https://ni.hil.ist/@kzfkz" class="default-link">Mastodon</a> and
+    >, <a href="https://ni.hil.ist/" class="default-link">Mastodon</a> and
     <a href="https://github.com/pedenys" class="default-link">GitHub</a>
   </p>
 </footer>
