--- a/src/components/home/ArtOfTheDay.component.astro
+++ b/src/components/home/ArtOfTheDay.component.astro
@@ -10,8 +10,8 @@
     />
 
     <figcaption>
-      <span class="arrow-up">↑</span> Léon Spilliaert, <i>Maison sur la digue</i
-      >, 1907
+      <span class="arrow">↑</span>
+      <span>Léon Spilliaert, <i>Maison sur la digue</i>, 1907</span>
     </figcaption>
   </figure>
 </div>
@@ -23,11 +23,42 @@
 
     border-radius: 4px;
   }
+
   figcaption {
-    font-size: 16px;
+    font-size: 14px;
     font-family: monospace;
   }
-  .arrow-up {
-    font-size: 20px;
+
+  .arrow {
+    font-size: 14px;
+  }
+
+  @media (min-width: 638px) {
+    figure {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: end;
+    }
+
+    figure img {
+      max-width: 70%;
+    }
+
+    figure figcaption {
+      margin-left: 14px;
+      font-size: 12px;
+
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+    }
+
+    figure .arrow {
+      display: inline-block;
+      transform: rotate(-90deg);
+      margin-right: 14px;
+      font-size: 18px;
+    }
   }
 </style>
