--- a/src/components/posts.component.astro
+++ b/src/components/posts.component.astro
@@ -1,5 +1,5 @@
 ---
-import type { Post } from "../types/writings.typetype";
+import type { Post } from "../types/writings.type";
 
 export interface Props {
   posts: Post[];
