--- a/src/pages/quotes.astro
+++ b/src/pages/quotes.astro
@@ -5,10 +5,12 @@ import Mainlayout from "../layouts/main.layout.astro";
 <Mainlayout>
   <script type="module" src="/quotes.js"></script>
   <section>
-    <figure id="quote">
+    <p id="english-version-hint">English version soon</p>
+    <figure class="default-bottom-spacing" id="quote">
       <blockquote></blockquote>
       <figcaption></figcaption>
     </figure>
+
     <noscript>
       <figure>
         <blockquote>Don’t quote. Make it yours and say it yourself.</blockquote>
@@ -25,26 +27,43 @@ import Mainlayout from "../layouts/main.layout.astro";
 <style>
   section {
     margin: 0 auto;
+    margin-top: 40px;
     max-width: 800px;
+    /* width height minus header height, footer height, margin-block page, margin-inline section */
+    min-height: calc(50vh - 60px - 60px - 40px - 14px - 40px - 28px);
+
+    margin-left: 1rem;
+
     display: flex;
-    align-items: center;
-    min-height: 80vh;
+    flex-direction: column;
   }
 
-  figure#quote {
-    display: none;
+  section {
+    margin-inline: 40px;
+    margin-block: 28px;
   }
 
   figure blockquote {
-    margin-left: 1rem;
+    margin: 0;
+    margin-bottom: 14px;
     font-style: italic;
-  }
-
-  figure figcaption {
-    margin-left: 1rem;
   }
 
   figure figcaption::before {
     content: "— ";
+  }
+
+  #english-version-hint {
+    background-color: var(--white-1);
+    font-size: 12px;
+    padding: 5px 9px;
+    border-radius: 50px;
+    opacity: 0.7;
+    margin-bottom: 14px;
+
+    display: inline-block;
+    text-align: right;
+    width: max-content;
+    align-self: flex-end;
   }
 </style>
